--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ show_excerpts: true # set to true to show excerpts on the homepage
 sass:
   sass_dir: _sass
 plainwhite:
+  disqus_shortname: kimhyojin-github-io
   name: Hyojing
   tagline: Developer
   date_format: "%b %-d, %Y"
@@ -38,7 +39,7 @@ plainwhite:
     # - username: jekyll
     #   instance: example.com
     # - username: jekyll2
-    #   instance: example.com
+    #   inplainwhite:
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
